rest/rest-deployment.yaml
apiVersion: v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Pod
metadata:
  name: project-rest
  labels:
      app: project-rest
spec:
  containers:
  - name: rest
    image: jennamage/project-rest:test16
    ports:
        - containerPort: 5000
