rest/rest-service.yaml
apiVersion: v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Service
metadata:
  name: project-rest-svc
spec:
  selector:
    app: project-rest
  ports:
  - name: project-rest
    port: 5000
    targetPort: 5000
